--- a/static/title.css
+++ b/static/title.css
@@ -106,7 +106,9 @@ header .links ul li a .active:hover {
   padding: .1rem 1rem;
 }
 
-
+.headerlogo:hover {
+  transform: scale(1.1);
+}
 
 .button-container {
   display: flex;
