Add Terms of Use and Privacy Policy links

--- a/templates/main.html
+++ b/templates/main.html
@@ -298,6 +298,8 @@
                     <a class="link1"href="#">Home</a>
                     <a class="link2"href="#">Sign in</a>
                     <a class="link3"href="#">Sing up</a>
+                    <a class="link4" href="https://www.privacypolicies.com/live/02ba4e00-0b74-4c3d-9564-485e8f58c758">Privacy Policy</a>
+                    <a class="link5" href="https://www.termsfeed.com/live/7a17785b-1384-4d57-9ad6-16244894bf38">Terms of Use</a>
                 </div>
             </div>
             <div class="section2">
