--- a/static/title.css
+++ b/static/title.css
@@ -160,12 +160,13 @@ footer .container {
 footer .container .section1 {
   display: flex;
   align-items: center;
+  padding: 2px;
 }
 
 footer .container .section1 a {
   text-decoration: none;
   color: var(--maincolor);
-  font-size: 20px;
+  font-size: 17px;
 }
 
 footer .container .section1 a:hover {
